src/bash/generated/BashParser.java
// Generated from .\Bash.g4 by ANTLR 4.9.1

package bash.generated;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BashParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, LCURLY=9, 
		RCURLY=10, GREATER_GREATER=11, GREATER_BAR=12, LESS_GREATER=13, LESS_LESS=14, 
		LESS_LESS_MINUS=15, LESS_LESS_LESS=16, LESS_AND=17, GREATER_AND=18, AND_GREATER=19, 
		AND_GREATER_GREATER=20, WHILE=21, UNTIL=22, DO=23, DONE=24, FOR=25, SELECT=26, 
		IN=27, CASE=28, ESAC=29, FUNCTION=30, COPROC=31, IF=32, THEN=33, FI=34, 
		ELSE=35, ELIF=36, ARITH_START=37, ARITH_END=38, COND_START=39, COND_END=40, 
		SEMI_SEMI=41, SEMI_AND=42, SEMI_SEMI_AND=43, AND_AND=44, OR_OR=45, BAR_AND=46, 
		BANG=47, TIME=48, ASSIGN=49, QUOTES=50, WS=51, NEWLINE=52, LINE_COMMENT=53, 
		MULTILINE_COMMENT=54, ARITH_CMD=55, ARITH_FOR_EXPRS=56, COND_CMD=57, NUMBER=58, 
		REDIR_WORD=59, ASSIGNMENT_WORD=60, WORD=61;
	public static final int
		RULE_inputunit = 0, RULE_word_list = 1, RULE_redirection = 2, RULE_simple_command_element = 3, 
		RULE_redirection_list = 4, RULE_simple_command = 5, RULE_command = 6, 
		RULE_shell_command = 7, RULE_for_command = 8, RULE_arith_for_command = 9, 
		RULE_select_command = 10, RULE_case_command = 11, RULE_function_def = 12, 
		RULE_function_body = 13, RULE_subshell = 14, RULE_coproc = 15, RULE_if_command = 16, 
		RULE_group_command = 17, RULE_arith_command = 18, RULE_cond_command = 19, 
		RULE_elif_clause = 20, RULE_case_clause = 21, RULE_pattern_list = 22, 
		RULE_case_clause_sequence = 23, RULE_pattern = 24, RULE_list = 25, RULE_compound_list = 26, 
		RULE_list0 = 27, RULE_list1 = 28, RULE_simple_list_terminator = 29, RULE_list_terminator = 30, 
		RULE_newline_list = 31, RULE_simple_list = 32, RULE_simple_list1 = 33, 
		RULE_pipeline_command = 34, RULE_pipeline = 35, RULE_timespec = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"inputunit", "word_list", "redirection", "simple_command_element", "redirection_list", 
			"simple_command", "command", "shell_command", "for_command", "arith_for_command", 
			"select_command", "case_command", "function_def", "function_body", "subshell", 
			"coproc", "if_command", "group_command", "arith_command", "cond_command", 
			"elif_clause", "case_clause", "pattern_list", "case_clause_sequence", 
			"pattern", "list", "compound_list", "list0", "list1", "simple_list_terminator", 
			"list_terminator", "newline_list", "simple_list", "simple_list1", "pipeline_command", 
			"pipeline", "timespec"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'>'", "'<'", "'-'", "';'", "'('", "')'", "'|'", "'&'", "'{'", 
			"'}'", "'>>'", "'>|'", "'<>'", "'<<'", "'<<-'", "'<<<'", "'<&'", "'>&'", 
			"'&>'", "'&>>'", "'while'", "'until'", "'do'", "'done'", "'for'", "'select'", 
			"'in'", "'case'", "'esac'", "'function'", "'coproc'", "'if'", "'then'", 
			"'fi'", "'else'", "'elif'", "'(('", "'))'", "'['", "']'", "';;'", "';&'", 
			"';;&'", "'&&'", "'||'", "'|&'", "'!'", "'time'", "'='", "'\"'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "LCURLY", "RCURLY", 
			"GREATER_GREATER", "GREATER_BAR", "LESS_GREATER", "LESS_LESS", "LESS_LESS_MINUS", 
			"LESS_LESS_LESS", "LESS_AND", "GREATER_AND", "AND_GREATER", "AND_GREATER_GREATER", 
			"WHILE", "UNTIL", "DO", "DONE", "FOR", "SELECT", "IN", "CASE", "ESAC", 
			"FUNCTION", "COPROC", "IF", "THEN", "FI", "ELSE", "ELIF", "ARITH_START", 
			"ARITH_END", "COND_START", "COND_END", "SEMI_SEMI", "SEMI_AND", "SEMI_SEMI_AND", 
			"AND_AND", "OR_OR", "BAR_AND", "BANG", "TIME", "ASSIGN", "QUOTES", "WS", 
			"NEWLINE", "LINE_COMMENT", "MULTILINE_COMMENT", "ARITH_CMD", "ARITH_FOR_EXPRS", 
			"COND_CMD", "NUMBER", "REDIR_WORD", "ASSIGNMENT_WORD", "WORD"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Bash.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BashParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InputunitContext extends ParserRuleContext {
		public List<Simple_listContext> simple_list() {
			return getRuleContexts(Simple_listContext.class);
		}
		public Simple_listContext simple_list(int i) {
			return getRuleContext(Simple_listContext.class,i);
		}
		public TerminalNode EOF() { return getToken(BashParser.EOF, 0); }
		public List<Simple_list_terminatorContext> simple_list_terminator() {
			return getRuleContexts(Simple_list_terminatorContext.class);
		}
		public Simple_list_terminatorContext simple_list_terminator(int i) {
			return getRuleContext(Simple_list_terminatorContext.class,i);
		}
		public InputunitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputunit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BashListener ) ((BashListener)listener).enterInputunit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BashListener ) ((BashListener)listener).exitInputunit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BashVisitor ) return ((BashVisitor<? extends T>)visitor).visitInputunit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputunitContext inputunit() throws RecognitionException {
		InputunitContext _localctx = new InputunitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inputunit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			simple_list();
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(75);
				simple_list_terminator();
				setState(76);
				simple_list();
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(83);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Word_listContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(BashParser.WORD, 0); }
		public TerminalNode NUMBER() { return getToken(BashParser.NUMBER, 0); }
		public Word_listContext word_list() {
			return getRuleContext(Word_listContext.class,0);
		}
		public Word_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_word_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BashListener ) ((BashListener)listener).enterWord_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BashListener ) ((BashListener)listener).exitWord_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BashVisitor ) return ((BashVisitor<? extends T>)visitor).visitWord_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Word_listContext word_list() throws RecognitionException {
		return word_list(0);
	}

	private Word_listContext word_list(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Word_listContext _localctx = new Word_listContext(_ctx, _parentState);
		Word_listContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_word_list, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WORD:
				{
				setState(86);
				match(WORD);
				}
				break;
			case NUMBER:
				{
				setState(87);
				match(NUMBER);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(96);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(94);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new Word_listContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_word_list);
						setState(90);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(91);
						match(WORD);
						}
						break;
					case 2:
						{
						_localctx = new Word_listContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_word_list);
						setState(92);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(93);
						match(NUMBER);
						}
						break;
					}
					} 
				}
				setState(98);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class RedirectionContext extends ParserRuleContext {
		public TerminalNode WORD() { return getToken(BashParser.WORD, 0); }
		public List<TerminalNode> NUMBER() { return getTokens(BashParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(BashParser.NUMBER, i);
		}
		public TerminalNode REDIR_WORD() { return getToken(BashParser.REDIR_WORD, 0); }
		public TerminalNode GREATER_GREATER() { return getToken(BashParser.GREATER_GREATER, 0); }
		public TerminalNode GREATER_BAR() { return getToken(BashParser.GREATER_BAR, 0); }
		public TerminalNode LESS_GREATER() { return getToken(BashParser.LESS_GREATER, 0); }
		public TerminalNode LESS_LESS() { return getToken(BashParser.LESS_LESS, 0); }
		public TerminalNode LESS_LESS_MINUS() { return getToken(BashParser.LESS_LESS_MINUS, 0); }
		public TerminalNode LESS_LESS_LESS() { return getToken(BashParser.LESS_LESS_LESS, 0); }
		public TerminalNode LESS_AND() { return getToken(BashParser.LESS_AND, 0); }
		public TerminalNode GREATER_AND() { return getToken(BashParser.GREATER_AND, 0); }
		public TerminalNode AND_GREATER() { return getToken(BashParser.AND_GREATER, 0); }
		public TerminalNode AND_GREATER_GREATER() { return getToken(BashParser.AND_GREATER_GREATER, 0); }
		public RedirectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_redirection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BashListener ) ((BashListener)listener).enterRedirection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BashListener ) ((BashListener)listener).exitRedirection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BashVisitor ) return ((BashVisitor<? extends T>)visitor).visitRedirection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RedirectionContext redirection() throws RecognitionException {
		RedirectionContext _localctx = new RedirectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_redirection);
		try {
			setState(215);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				match(T__0);
				setState(100);
				match(WORD);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				match(T__1);
				setState(102);
				match(WORD);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(103);
				match(NUMBER);
				setState(104);
				match(T__0);
				setState(105);
				match(WORD);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(106);
				match(NUMBER);
				setState(107);
				match(T__1);
				setState(108);
				match(WORD);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(109);
				match(REDIR_WORD);
				setState(110);
				match(T__0);
				setState(111);
				match(WORD);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(112);
				match(REDIR_WORD);
				setState(113);
				match(T__1);
				setState(114);
				match(WORD);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(115);
				match(GREATER_GREATER);
				setState(116);
				match(WORD);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(117);
				match(NUMBER);
				setState(118);
				match(GREATER_GREATER);
				setState(119);
				match(WORD);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(120);
				match(REDIR_WORD);
				setState(121);
				match(GREATER_GREATER);
				setState(122);
				match(WORD);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(123);
				match(GREATER_BAR);
				setState(124);
				match(WORD);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(125);
				match(NUMBER);
				setState(126);
				match(GREATER_BAR);
				setState(127);
				match(WORD);
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(128);
				match(REDIR_WORD);
				setState(129);
				match(GREATER_BAR);
				setState(130);
				match(WORD);
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(131);
				match(LESS_GREATER);
				setState(132);
				match(WORD);
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(133);
				match(NUMBER);
				setState(134);
				match(LESS_GREATER);
				setState(135);
				match(WORD);
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(136);
				match(REDIR_WORD);
				setState(137);
				match(LESS_GREATER);
				setState(138);
				match(WORD);
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(139);
				match(LESS_LESS);
				setState(140);
				match(WORD);
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(141);
				match(NUMBER);
				setState(142);
				match(LESS_LESS);
				setState(143);
				match(WORD);
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(144);
				match(REDIR_WORD);
				setState(145);
				match(LESS_LESS);
				setState(146);
				match(WORD);
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(147);
				match(LESS_LESS_MINUS);
				setState(148);
				match(WORD);
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(149);
				match(NUMBER);
				setState(150);
				match(LESS_LESS_MINUS);
				setState(151);
				match(WORD);
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(152);
				match(REDIR_WORD);
				setState(153);
				match(LESS_LESS_MINUS);
				setState(154);
				match(WORD);
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(155);
				match(LESS_LESS_LESS);
				setState(156);
				match(WORD);
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(157);
				match(NUMBER);
				setState(158);
				match(LESS_LESS_LESS);
				setState(159);
				match(WORD);
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(160);
				match(REDIR_WORD);
				setState(161);
				match(LESS_LESS_LESS);
				setState(162);
				match(WORD);
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 25);
				{
				setState(163);
				match(LESS_AND);
				setState(164);
				match(NUMBER);
				}
				break;
			case 26:
				enterOuterAlt(_localctx, 26);
				{
				setState(165);
				match(NUMBER);
				setState(166);
				match(LESS_AND);
				setState(167);
				match(NUMBER);
				}
				break;
			case 27:
				enterOuterAlt(_localctx, 27);
				{
				setState(168);
				match(REDIR_WORD);
				setState(169);
				match(LESS_AND);
				setState(170);
				match(NUMBER);
				}
				break;
			case 28:
				enterOuterAlt(_localctx, 28);
				{
				setState(171);
				match(GREATER_AND);
				setState(172);
				match(NUMBER);
				}
				break;
			case 29:
				enterOuterAlt(_localctx, 29);
				{
				setState(173);
				match(NUMBER);
				setState(174);
				match(GREATER_AND);
				setState(175);
				match(NUMBER);
				}
				break;
			case 30:
				enterOuterAlt(_localctx, 30);
				{
				setState(176);
				match(REDIR_WORD);
				setState(177);
				match(GREATER_AND);
				setState(178);
				match(NUMBER);
				}
				break;
			case 31:
				enterOuterAlt(_localctx, 31);
				{
				setState(179);
				match(LESS_AND);
				setState(180);
				match(WORD);
				}
				break;
			case 32:
				enterOuterAlt(_localctx, 32);
				{
				setState(181);
				match(NUMBER);
				setState(182);
				match(LESS_AND);
				setState(183);
				match(WORD);
				}
				break;
			case 33:
				enterOuterAlt(_localctx, 33);
				{
				setState(184);
				match(REDIR_WORD);
				setState(185);
				match(LESS_AND);
				setState(186);
				match(WORD);
				}
				break;
			case 34:
				enterOuterAlt(_localctx, 34);
				{
				setState(187);
				match(GREATER_AND);
				setState(188);
				match(WORD);
				}
				break;
			case 35:
				enterOuterAlt(_localctx, 35);
				{
				setState(189);
				match(NUMBER);
